Updates to Testing Your First App course

--- a/content/courses/testing-your-first-application/app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/app-install-and-overview.mdx
@@ -71,7 +71,7 @@ You can open the terminal via Terminal > New Terminal
 
 ## Installing our NPM dependencies
 
-Before we install our dependencies let’s make sure we are running the correct version of NodeJS.
+Before we install our dependencies let's make sure we are running the correct version of NodeJS.
 
 In the terminal type the following and then press enter
 
