removing git branch callouts

--- a/content/courses/testing-your-first-application/app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/app-install-and-overview.mdx
@@ -19,23 +19,15 @@ There are a couple of different ways you can do this.
 
 ### Cloning with Git
 
-If you are familiar with Git and already have it installed the easiest way to clone [the repo](https://github.com/cypress-io/cypress-realworld-testing-course-app/tree/start) is to run this command in your terminal.
-
-:::info
-Running this command will download the repo on the “start” branch. It is very important you are on the “start” branch and **not** on master.
-:::
+If you are familiar with Git and already have it installed the easiest way to clone [the repo](https://github.com/cypress-io/cypress-realworld-testing-course-app) is to run this command in your terminal.
 
 ```bash
-git clone --branch start https://github.com/cypress-io/cypress-realworld-testing-course-app.git
+git clone https://github.com/cypress-io/cypress-realworld-testing-course-app.git
 ```
 
 ### Downloading a zip file
 
-If you are not familiar with Git or don’t have it installed, you can easily download a zip file of the repo [here](https://github.com/cypress-io/cypress-realworld-testing-course-app/tree/start).
-
-:::info
-You want to make sure you are on the “start” branch. The link provided should do this for you automatically, but you should double-check anyways.
-:::
+If you are not familiar with Git or don't have it installed, you can easily download a zip file of the repo [here](https://github.com/cypress-io/cypress-realworld-testing-course-app).
 
 ![Screen Shot 2022-06-27 at 4.05.46 PM.png](/images/testing-your-first-application/app-install-and-overview/Screen_Shot_2022-06-27_at_4.05.46_PM.png)
 
