changing examples to use equals

--- a/content/courses/testing-your-first-application/how-to-test-multiple-pages.mdx
+++ b/content/courses/testing-your-first-application/how-to-test-multiple-pages.mdx
@@ -258,17 +258,17 @@ describe("Home page", () => {
   context("Courses section", () => {
     it("Course: Testing Your First Next.js Application", () => {
       cy.getByData("course-0").find("a").contains("Get started").click()
-      cy.location("pathname").should("eq", "/testing-your-first-application")
+      cy.location("pathname").should("equal", "/testing-your-first-application")
     })
 
     it("Course: Testing Foundations", () => {
       cy.getByData("course-1").find("a").contains("Get started").click()
-      cy.location("pathname").should("eq", "/testing-foundations")
+      cy.location("pathname").should("equal", "/testing-foundations")
     })
 
     it("Course: Cypress Fundamentals", () => {
       cy.getByData("course-2").find("a").contains("Get started").click()
-      cy.location("pathname").should("eq", "/cypress-fundamentals")
+      cy.location("pathname").should("equal", "/cypress-fundamentals")
     })
   })
 })
