--- a/content/courses/testing-your-first-application/installing-cypress-and-writing-your-first-test.mdx
+++ b/content/courses/testing-your-first-application/installing-cypress-and-writing-your-first-test.mdx
@@ -143,7 +143,7 @@ Click on “E2E Testing”
 
 ![Screen Shot 2022-06-28 at 9.22.20 AM.png](/images/testing-your-first-application/installing-cypress-and-writing-your-first-test/Screen_Shot_2022-06-28_at_9.22.20_AM.png)
 
-Then click on “Chrome” and the “Starte E2E Testing in Chrome” button.
+Then click on “Chrome” and the “Start E2E Testing in Chrome” button.
 
 ![Screen Shot 2022-06-28 at 9.22.30 AM.png](/images/testing-your-first-application/installing-cypress-and-writing-your-first-test/Screen_Shot_2022-06-28_at_9.22.30_AM.png)
 
