--- a/content/courses/testing-your-first-application/app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/app-install-and-overview.mdx
@@ -7,8 +7,7 @@
 Welcome to the Testing your first application course. In this course, we are going to learn how to install Cypress, how to write end-to-end tests and some best practices along the way.
 
 :::info
-Before we begin, this content was written with the assumption that you know the basics of HTML, CSS, and JavaScript. It is ok if you have never used Cypress before. We will teach you everything you need to know.
-
+Before we begin, this content was written with the assumption that you know the basics of HTML, CSS, and JavaScript/TypeScript. It is ok if you have never used Cypress before. We will teach you everything you need to know.
 :::
 
 ## Installing the application
