--- a/content/courses/testing-your-first-application/app-install-and-overview.mdx
+++ b/content/courses/testing-your-first-application/app-install-and-overview.mdx
@@ -7,8 +7,7 @@
 Welcome to the Testing your first application course. In this course, we are going to learn how to install Cypress, how to write end-to-end tests and some best practices along the way.
 
 :::info
-Before we begin, this content was written with the assumption that you know the basics of HTML, CSS, and JavaScript. It is ok if you have never used Cypress before. We will teach you everything you need to know.
-
+Before we begin, this content was written with the assumption that you know the basics of HTML, CSS, and JavaScript/TypeScript. It is ok if you have never used Cypress before. We will teach you everything you need to know.
 :::
 
 ## Installing the application
@@ -19,23 +18,15 @@ There are a couple of different ways you can do this.
 
 ### Cloning with Git
 
-If you are familiar with Git and already have it installed the easiest way to clone [the repo](https://github.com/cypress-io/cypress-realworld-testing-course-app/tree/start) is to run this command in your terminal.
-
-:::info
-Running this command will download the repo on the “start” branch. It is very important you are on the “start” branch and **not** on master.
-:::
+If you are familiar with Git and already have it installed the easiest way to clone [the repo](https://github.com/cypress-io/cypress-realworld-testing-course-app) is to run this command in your terminal.
 
 ```bash
-git clone --branch start https://github.com/cypress-io/cypress-realworld-testing-course-app.git
+git clone https://github.com/cypress-io/cypress-realworld-testing-course-app.git
 ```
 
 ### Downloading a zip file
 
-If you are not familiar with Git or don’t have it installed, you can easily download a zip file of the repo [here](https://github.com/cypress-io/cypress-realworld-testing-course-app/tree/start).
-
-:::info
-You want to make sure you are on the “start” branch. The link provided should do this for you automatically, but you should double-check anyways.
-:::
+If you are not familiar with Git or don't have it installed, you can easily download a zip file of the repo [here](https://github.com/cypress-io/cypress-realworld-testing-course-app).
 
 ![Screen Shot 2022-06-27 at 4.05.46 PM.png](/images/testing-your-first-application/app-install-and-overview/Screen_Shot_2022-06-27_at_4.05.46_PM.png)
 
@@ -71,7 +62,7 @@ You can open the terminal via Terminal > New Terminal
 
 ## Installing our NPM dependencies
 
-Before we install our dependencies let’s make sure we are running the correct version of NodeJS.
+Before we install our dependencies let's make sure we are running the correct version of NodeJS.
 
 In the terminal type the following and then press enter
 
