--- a/content/courses/cypress-fundamentals/how-to-write-a-test.mdx
+++ b/content/courses/cypress-fundamentals/how-to-write-a-test.mdx
@@ -28,7 +28,7 @@ With these three steps in mind, here is what a simple Cypress end-to-end test lo
 
 ## A simple end-to-end test
 
-The following example is from the React TodoMVC app, which we cover in the "Testing your first application" section.
+The following example is from the [React TodoMVC app](https://github.com/cypress-io/cypress-example-todomvc):
 
 ```js
 // app.spec.js
