--- a/content/courses/cypress-fundamentals/waiting-and-retry-ability.mdx
+++ b/content/courses/cypress-fundamentals/waiting-and-retry-ability.mdx
@@ -2,9 +2,9 @@
 
 ## Retry-ability & Flake resistance
 
-Retry-ability is a core feature of Cypress and having a proper understanding of it is incredibly important. While most other testing tools require you to add "hard" waits, where you tell the tool to wait for a specified amount of time, Cypress will automatically wait for you. Since [Cypress runs in the browser](/cypress-fundamentals/cypress-runs-in-the-browser), it understands everything that is happening within your application.
+Retry-ability is a core feature of Cypress and having a proper understanding of it is incredibly important. While some other testing tools require you to add "hard" waits, where you tell the tool to wait for a specified amount of time, Cypress will automatically wait for you. Since [Cypress runs in the browser](/cypress-fundamentals/cypress-runs-in-the-browser), it understands everything that is happening within your application.
 
-Cypress is notified the moment the page loads and the moment it unloads. It is also notified of any events that are fired. Cypress is also smart enough to know how fast an element is animating and will wait for it to stop animating before acting upon it. It will also automatically wait until an element becomes visible, becomes enabled, or when another element is no longer covering it.
+Cypress is notified the moment the page loads and the moment it unloads. It is also notified of any events that are fired. Cypress is smart enough to know how fast an element is animating and will wait for it to stop animating before acting upon it. It will also automatically wait until an element becomes visible, becomes enabled, or when another element is no longer covering it.
 
 Cypress will pause executing any commands when a page transition happens until the new page has fully loaded.
 
