--- a/content/courses/cypress-fundamentals/cypress-is-just-javascript.mdx
+++ b/content/courses/cypress-fundamentals/cypress-is-just-javascript.mdx
@@ -35,21 +35,24 @@ Here is another example where we use [Array.forEach()](https://developer.mozilla
 const people = ["moe", "curly", "larry"]
 // Use method from lodash to get a person to use in a comment
 const transactions = [{ id: 1 }]
-_.each(transaction,
-it("comments on a transaction", () => {
-    cy.getBySelLike("transaction-item").first().click();
-    cy.wait("@getTransaction");
+_.each(transactions, () => {
+  it("comments on a transaction", () => {
+    cy.getBySelLike("transaction-item").first().click()
+    cy.wait("@getTransaction")
 
-    const comments = ["Thank you!", "Appreciate it."];
+    const comments = ["Thank you!", "Appreciate it."]
 
     comments.forEach((comment, index) => {
-      cy.getBySelLike("comment-input").type(`${comment}{enter}`);
-      cy.getBySelLike("comments-list").children().eq(index).contains(comment);
-    });
+      cy.getBySelLike("comment-input").type(`${comment}{enter}`)
+      cy.getBySelLike("comments-list").children().eq(index).contains(comment)
+    })
 
-    cy.getBySelLike("comments-list").children().should("have.length", comments.length);
-    cy.visualSnapshot("Comment on Transaction");
-  });
+    cy.getBySelLike("comments-list")
+      .children()
+      .should("have.length", comments.length)
+    cy.visualSnapshot("Comment on Transaction")
+  })
+})
 ```
 
 ## Practice
